Bug 510244 - Download notifications do not dismiss themselves
Summary: Download notifications do not dismiss themselves
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.4.91
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://bugreports.qt.io/browse/QTBUG...
Keywords:
: 510478 510535 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-04 21:49 UTC by Antti Savolainen
Modified: 2025-10-17 09:21 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Savolainen 2025-10-04 21:49:57 UTC
SUMMARY
Demonstrative video: https://youtu.be/a04cAmTWDlo
In the beta the download notifications do not dismiss themselves.

STEPS TO REPRODUCE
1. Download an image using firefox

OBSERVED RESULT
The notification sticks around even if the timeout bar reaches the end

EXPECTED RESULT
 The notification should stay disappear after the timeout is over

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.91
KDE Frameworks Version: 6.18.0
Qt Version: 6.10.0
Kernel Version: 6.17.0-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i7-7600U CPU @ 2.80GHz
Memory: 24 GiB of RAM (23.2 GiB usable)
Graphics Processor: Intel® HD Graphics 620
Manufacturer: LENOVO
Product Name: 20HG0003SG
System Version: ThinkPad T470s
Comment 1 TraceyC 2025-10-06 21:40:04 UTC
I can reproduce this on git-master
Comment 2 Nate Graham 2025-10-07 19:20:14 UTC
With LibreWolf (a Firefox fork) in a Flatpak, I can't reproduce this issue on current git master.
Comment 3 Nicolas Fella 2025-10-08 17:21:46 UTC
This appears to be a Qt 6.10 bug: https://bugreports.qt.io/browse/QTBUG-140928
Comment 4 Bug Janitor Service 2025-10-08 17:28:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5906
Comment 5 Nicolas Fella 2025-10-11 09:42:16 UTC
*** Bug 510478 has been marked as a duplicate of this bug. ***
Comment 6 Patrick Silva 2025-10-11 13:20:16 UTC
Notification from Dolphin after a data transfer is also affected.

Operating System: Arch Linux 
KDE Plasma Version: 6.4.91
KDE Frameworks Version: 6.18.0
Qt Version: 6.10.0
Graphics Platform: Wayland
Comment 7 Antonio Rojas 2025-10-12 18:58:38 UTC
*** Bug 510535 has been marked as a duplicate of this bug. ***
Comment 8 Kai Uwe Broulik 2025-10-13 06:09:46 UTC
Git commit 1f2464102857b43d8198398b675cbc5cf956144e by Kai Uwe Broulik, on behalf of Nicolas Fella.
Committed on 13/10/2025 at 06:09.
Pushed by broulik into branch 'master'.

[libnotificationmanager] Implement ActionLabelsRole in JobsModel

Currently we don't handle this role at all and return QVariant.

This triggers https://bugreports.qt.io/browse/QTBUG-140928 which
causes hasSomeActions to be true for job finish notifications,
causing them to not be closed on expire.

By returning a data object of the right type we work around the
issue

M  +2    -0    libnotificationmanager/jobsmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/1f2464102857b43d8198398b675cbc5cf956144e
Comment 9 Kai Uwe Broulik 2025-10-13 17:02:55 UTC
Git commit f8c23bd3f2dd4798c244ddd41454516aca40651d by Kai Uwe Broulik.
Committed on 13/10/2025 at 06:09.
Pushed by broulik into branch 'Plasma/6.5'.

[libnotificationmanager] Implement ActionLabelsRole in JobsModel

Currently we don't handle this role at all and return QVariant.

This triggers https://bugreports.qt.io/browse/QTBUG-140928 which
causes hasSomeActions to be true for job finish notifications,
causing them to not be closed on expire.

By returning a data object of the right type we work around the
issue


(cherry picked from commit 1f2464102857b43d8198398b675cbc5cf956144e)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +2    -0    libnotificationmanager/jobsmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f8c23bd3f2dd4798c244ddd41454516aca40651d
Comment 10 Kai Uwe Broulik 2025-10-13 19:29:38 UTC
Git commit 21a20fcc9c6eace827b3356ab65cc3ae2dd42d24 by Kai Uwe Broulik.
Committed on 13/10/2025 at 17:03.
Pushed by broulik into branch 'Plasma/6.4'.

[libnotificationmanager] Implement ActionLabelsRole in JobsModel

Currently we don't handle this role at all and return QVariant.

This triggers https://bugreports.qt.io/browse/QTBUG-140928 which
causes hasSomeActions to be true for job finish notifications,
causing them to not be closed on expire.

By returning a data object of the right type we work around the
issue


(cherry picked from commit 1f2464102857b43d8198398b675cbc5cf956144e)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

(cherry picked from commit f8c23bd3f2dd4798c244ddd41454516aca40651d)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +2    -0    libnotificationmanager/jobsmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/21a20fcc9c6eace827b3356ab65cc3ae2dd42d24